--- a/test/molecule-role/molecule/secrets/playbook.run.prepare.yml
+++ b/test/molecule-role/molecule/secrets/playbook.run.prepare.yml
@@ -1,12 +1,4 @@
 ---
-- name: Prepare Connection
-  hosts: localhost
-  connection: local
-  gather_facts: true
-  tasks:
-    - include_tasks: ../common/prepare/keypair.yml
-    - include_tasks: ../common/create/wait-for-boot-process-to-finish.yml
-
 - name: Prepare Linux Agents
   hosts: agent_linux_vm
   gather_facts: false
@@ -81,7 +73,7 @@
       service: name="stackstate-agent-trace" state="restarted"
       become: yes
 
-- name: Prepare Connection
+- name: Encryption
   hosts: localhost
   connection: local
   gather_facts: true
