--- a/test/molecule-role/molecule/localinstall/provisioner.setup.yml
+++ b/test/molecule-role/molecule/localinstall/provisioner.setup.yml
@@ -1,12 +1,10 @@
 ---
 provisioner:
   name: ansible
-  options:
-    'vault-id': "${MOLECULE_SCENARIO_NAME}@${CI_PROJECT_DIR}${DEV_PATH}/test/molecule-role/molecule/vault-password.py"
   playbooks:
-    create: playbook.create.yml
-    prepare: playbook.prepare.yml
-    destroy: playbook.destroy.yml
+    create: playbook.setup.create.yml
+    prepare: playbook.setup.prepare.yml
+    destroy: playbook.setup.destroy.yml
   lint:
     name: ansible-lint
   inventory:
