--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -859,8 +859,8 @@ molecule_kubernetes_cleanup:
 
 .molecule_localinstall_rule:
   - &localinstall_ignore_rule
-    if: ($CI_COMMIT_TAG || $CI_COMMIT_REF_NAME == "master") && $CI_COMMIT_MESSAGE =~ /\[molecule\-/ && $CI_COMMIT_MESSAGE !~ /\[molecule\-localinstall]/
-    when: never
+    if: $CI_COMMIT_MESSAGE =~ /\[molecule\-localinstall]/
+    when: always
 
 molecule_localinstall_create:
   <<: *molecule
@@ -926,8 +926,8 @@ molecule_localinstall_success_cleanup:
 
 .molecule_secrets_rule:
   - &secrets_ignore_rule
-    if: ($CI_COMMIT_TAG || $CI_COMMIT_REF_NAME == "master") && $CI_COMMIT_MESSAGE =~ /\[molecule\-/ && $CI_COMMIT_MESSAGE !~ /\[molecule\-secrets]/
-    when: never
+    if: $CI_COMMIT_MESSAGE =~ /\[molecule\-secrets]/
+    when: always
 
 molecule_secrets_create:
   <<: *molecule
