Temp revert artifactory to docker.io [molecule-compose][molecule-integrations][molecule-secrets][molecule-localinstall][molecule-swarm][molecule-vms]

--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -1,4 +1,4 @@
-image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:latest7
+image: docker.io/stackstate/stackstate-agent-runner-gitlab:latest7
 
 stages:
   - manual_cleanup
@@ -153,7 +153,7 @@ deps_deb:
 deps_rpm:
   stage: prepare
   interruptible: true
-  image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:centos6_latest_v7
+  image: docker.io/stackstate/stackstate-agent-runner-gitlab:centos6_latest_v7
   cache:
     key: "deps-rpm-$STS_VER-$CI_COMMIT_REF_SLUG"
     paths:
@@ -404,7 +404,7 @@ build_deb:
 build_rpm:
   stage: build
   interruptible: true
-  image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:centos6_latest_v7
+  image: docker.io/stackstate/stackstate-agent-runner-gitlab:centos6_latest_v7
   needs:
     - deps_rpm
   tags:
@@ -512,7 +512,7 @@ test_deb_renaming:
 test_rpm_renaming:
   stage: test
   interruptible: true
-  image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:centos6_20190429
+  image: docker.io/stackstate/stackstate-agent-runner-gitlab:centos6_20190429
   needs:
     - build_rpm
   before_script: []
@@ -580,7 +580,7 @@ pre_release_win:
 pre_release_rpm:
   stage: pre_release
   interruptible: true
-  image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:deb-rpmpublisher
+  image: docker.io/stackstate/stackstate-agent-runner-gitlab:deb-rpmpublisher
   needs:
     - build_rpm
   before_script: []
@@ -595,7 +595,7 @@ pre_release_rpm:
 
 pre_release_main_agent_image: &pre_release_image
   stage: pre_release
-  image: artifactory.stackstate.io/docker-virtual/docker:18.06.0
+  image: docker.io/docker:18.06.0
   needs:
     - build_deb
   variables:
@@ -603,7 +603,7 @@ pre_release_main_agent_image: &pre_release_image
     DOCKER_HOST: tcp://docker:2375
     DOCKER_TLS_CERTDIR: ""
   services:
-    - name: artifactory.stackstate.io/docker-virtual/docker:18.09-dind
+    - name: docker.io/docker:18.09-dind
       alias: docker
   before_script: []
   script:
@@ -1132,7 +1132,7 @@ release_deb:
 release_rpm:
   interruptible: true
   stage: release
-  image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:deb-rpmpublisher
+  image: docker.io/stackstate/stackstate-agent-runner-gitlab:deb-rpmpublisher
   dependencies:
     - build_rpm
   before_script:
@@ -1184,7 +1184,7 @@ release_win:
 
 .base_release_image: &base_release_image
   stage: release
-  image: artifactory.stackstate.io/docker-virtual/docker:18.06.0
+  image: docker.io/docker:18.06.0
   dependencies:
     - build_deb
   variables:
@@ -1192,7 +1192,7 @@ release_win:
     DOCKER_HOST: tcp://docker:2375
     DOCKER_TLS_CERTDIR: ""
   services:
-    - name: artifactory.stackstate.io/docker-virtual/docker:18.09-dind
+    - name: docker.io/docker:18.09-dind
       alias: docker
   before_script: []
   tags:
