--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -674,7 +674,7 @@ pre_release_cluster_agent_image:
   stage: prepare
   script:
     - cd $CI_PROJECT_DIR/test
-    - ./molecule3.sh --base-config ./molecule/$MOLECULE_SCENARIO/provisioner.setup.yml create --scenario-name $MOLECULE_SCENARIO
+    - ./molecule3.sh $MOLECULE_SCENARIO create
 
 # Primary test steps for all the molecule builds
 .molecule_test: &molecule_test
@@ -682,14 +682,14 @@ pre_release_cluster_agent_image:
   stage: acceptance
   script:
     - cd $CI_PROJECT_DIR/test
-    - ./molecule3.sh --base-config ./molecule/$MOLECULE_SCENARIO/provisioner.run.yml test --scenario-name $MOLECULE_SCENARIO --destroy=never
+    - ./molecule3.sh $MOLECULE_SCENARIO test
 
 # Primary destroy steps for all the molecule builds
 .molecule_destroy: &molecule_destroy
   stage: cleanup
   script:
     - cd $CI_PROJECT_DIR/test
-    - ./molecule3.sh --base-config ./molecule/$MOLECULE_SCENARIO/provisioner.setup.yml destroy --scenario-name $MOLECULE_SCENARIO
+    - ./molecule3.sh $MOLECULE_SCENARIO destroy
 
 # Job Seq: Molecule
 # Type: Compose
