--- a/test/molecule-role/molecule/kubernetes/playbook.setup.prepare.yml
+++ b/test/molecule-role/molecule/kubernetes/playbook.setup.prepare.yml
@@ -5,11 +5,32 @@
   tasks:
     - include_tasks: ../common/prepare/ubuntu18-automatic-updates.yml
     - include_tasks: ../common/prepare/install-provisioning-dependencies.yml
-    - include_tasks: ../common/prepare/configure-aws-credentials.yml
+
+    - name: Configure aws credentials
+      copy:
+        content: |
+          [default]
+          aws_access_key_id = {{ lookup("env", "AWS_ACCESS_KEY_ID")}}
+          aws_secret_access_key = {{ lookup("env", "AWS_SECRET_ACCESS_KEY")}}
+        dest: /home/ubuntu/.aws/credentials
+
     - include_tasks: ../common/prepare/docker-login.yml
-    - include_tasks: ../common/prepare/copy-terraform-files-and-manifests.yml
-    - include_tasks: ../common/prepare/copy-receiver-files.yml
-    - include_tasks: ../common/prepare/copy-verify-and-create-script-file.yml
+
+    - name: Copy Terraform Files and Manifests
+      copy:
+        src: "../../../../deployment/kubernetes/"
+        dest: "/home/ubuntu/deployment"
+
+    - name: Copy Receiver files
+      copy:
+        src: "files/receiver"
+        dest: "/home/ubuntu/"
+
+    - name: Copy Verify and Create Script file
+        copy:
+          src: ./../verify-or-create-topics.sh
+          dest: /home/ubuntu/receiver
+          mode: u+x
 
     - name: Generate env token
       shell: echo token=$(cat /dev/urandom | env LC_CTYPE=C tr -dc 'a-zA-Z0-9' | fold -w 32 | head -n 1) > env.txt
