Force creation step slow down to sync up with the pre-release stage, Slow down will happen before EC2 creation [molecule-compose][molecule-integrations][molecule-secrets][molecule-localinstall][molecule-swarm][molecule-vms][molecule-kubernetes]

--- a/test/molecule-role/molecule/kubernetes/playbook.setup.create.yml
+++ b/test/molecule-role/molecule/kubernetes/playbook.setup.create.yml
@@ -38,6 +38,7 @@
         to_port: 0
         cidr_ip: '0.0.0.0/0'
   tasks:
+    - include_tasks: ../common/create/pause.yml
     - include_tasks: ../common/create/create-security-group.yml
     - include_tasks: ../common/create/keypair.yml
     - include_tasks: ../common/create/create-molecule-instances.yml
