Remove cache folder Make keypairs a more general name to allow replacing by the same branch Always attempt keypair delete and ignore error Add cleanup to kubernetes prepare phase Update molecule3 script to contain new functions and layout Add a pause molecule jobs on CI only Create a cache for localhost Restore a cache for localhost Update kubernetes hosts and vars

--- a/test/molecule-role/molecule/common/create/keypair.yml
+++ b/test/molecule-role/molecule/common/create/keypair.yml
@@ -5,10 +5,10 @@
   register: keypair_local
 
 - name: Delete remote keypair
+  ignore_errors: true
   ec2_key:
     name: "{{ keypair_name }}"
     state: absent
-  when: not keypair_local.stat.exists
 
 - name: Create keypair
   ec2_key:
