--- a/test/molecule-role/molecule/kubernetes/provisioner.run.yml
+++ b/test/molecule-role/molecule/kubernetes/provisioner.run.yml
@@ -2,6 +2,7 @@
 provisioner:
   name: ansible
   playbooks:
+    cleanup: playbook.setup.cleanup.yml
     create: playbook.run.create.yml
     prepare: playbook.run.prepare.yml
   lint:
