--- a/test/molecule-role/molecule/common/prepare/restore-molecule-cache.yml
+++ b/test/molecule-role/molecule/common/prepare/restore-molecule-cache.yml
@@ -1,5 +1,12 @@
 ---
-- name: Copy Molecule Cache Files
+- name: (CI) Copy Molecule Cache Files
+  when: ci_project_dir is defined and ci_project_dir != ""
   copy:
     src: "{{ci_project_dir}}/.cache"
-    dest: "/root"
+    dest: "{{ molecule_ephemeral_directory | dirname | dirname | dirname | dirname  }}"
+
+- name: (Localhost) Copy Molecule Cache Files
+  when: ci_project_dir is not defined or ci_project_dir == ""
+  copy:
+    src: "{{playbook_dir | dirname | dirname}}/.cache"
+    dest: "{{ molecule_ephemeral_directory | dirname | dirname | dirname | dirname  }}"
