--- a/test/molecule-role/molecule/kubernetes/provisioner.setup.yml
+++ b/test/molecule-role/molecule/kubernetes/provisioner.setup.yml
@@ -5,6 +5,7 @@ provisioner:
     create: playbook.setup.create.yml
     prepare: playbook.setup.prepare.yml
     destroy: playbook.setup.destroy.yml
+    cleanup: playbook.setup.cleanup.yml
   lint:
     name: ansible-lint
   inventory:
